--- a/ZHA IKEA Tradfri on-off Switch (Scene Preset).yaml
+++ b/ZHA IKEA Tradfri on-off Switch (Scene Preset).yaml
@@ -249,7 +249,7 @@ action:
           - repeat:
               while:
                 - condition: template
-                  value_template: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', '==', 255) | list | length > 0 }}"
+                  value_template: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'lt', 255) | list | length > 0 }}"
               sequence:
                 - choose:
                     - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'lt', 255 - hold_press_change) | list | length > 0 }}"
