--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -171,6 +171,8 @@ blueprint:
           mode: slider
 mode: queued
 max_exceeded: silent
+variables:
+  dimmer_switches: !input dimmer_switch
 trigger:
   - platform: event
     event_type: zha_event
@@ -178,7 +180,7 @@ trigger:
       command: []
   - platform: template
     value_template: >
-      {{ trigger.event.data.device_id in (input.dimmer_switch) }}
+      {{ trigger.event.data.device_id in (dimmer_switches | map(attribute='device_id') | list) }}
 action:
   - variables:
       command: "{{ trigger.event.data.command }}"
