--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -171,9 +171,9 @@ blueprint:
           mode: slider
 mode: queued
 max_exceeded: silent
-variables:
-  dimmer_switches: !input dimmer_switch
 trigger:
+  - variables:
+    dimmer_switches: !input dimmer_switch
   - platform: event
     event_type: zha_event
     event_data:
