--- a/ZHA Philips Hue Dimmer Switch V2 (RWL022).yaml
+++ b/ZHA Philips Hue Dimmer Switch V2 (RWL022).yaml
@@ -83,6 +83,24 @@ blueprint:
           step: 1.0
           unit_of_measurement: s
           mode: slider
+    tv_entity:
+      name: TV Entity
+      description: The TV entity to check (optional)
+      default: ""
+      selector:
+        entity:
+          domain:
+            - media_player
+          multiple: false
+    tv_on_lights:
+      name: Lights when TV is on
+      description: The lights to control when the TV is on (optional)
+      default: []
+      selector:
+        entity:
+          domain:
+            - light
+          multiple: true
 mode: restart
 max_exceeded: silent
 trigger:
@@ -100,7 +118,14 @@ action:
       active_scene:
         "{{ iif(states(scene_helper) | int(0) >= included_scenes | count,
         0, states(scene_helper)) | int(0) }}"
-      target_lights: !input light
+      tv_entity: !input tv_entity
+      tv_on_lights: !input tv_on_lights
+      target_lights: >
+        {% if tv_entity and is_state(tv_entity, 'on') and tv_on_lights %}
+          {{ tv_on_lights }}
+        {% else %}
+          {{ input.light }}
+        {% endif %}
       hold_press_change: !input hold_press_change
   - choose:
       - conditions:
