--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -230,11 +230,15 @@ action:
         sequence:
           - service: light.turn_off
             target:
-              entity_id: >
-                {% set diff = expand(all_lights) | rejectattr('entity_id', 'in', lights_when_tv_on) | map(attribute='entity_id') | list %}
-                {{ diff }}
+              entity_id: "{{ all_lights }}"
             data:
               transition: !input transition_time
+          - service: light.turn_on
+            target:
+              entity_id: "{{ lights_when_tv_on }}"
+            data:
+              transition: !input transition_time
+              brightness: 128 # You can adjust this value as needed
       - conditions:
           - "{{ command == 'on_press' }}"
         sequence:
