--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -1,6 +1,8 @@
 blueprint:
   name: ZHA Philips Hue Dimmer Switch (RWL022) (Scene Preset)
-  description: Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
+  description: >
+    Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
+    Version 1.1.0
   domain: automation
   input:
     dimmer_switch:
@@ -123,7 +125,6 @@ blueprint:
                   "preset_id": "d7225176-5cb9-47f3-ab99-8ca9908866fc",
                   "type": "dynamic"
                 }
-          multiple: true
     dynamic_transition:
       name: Dynamic Transition
       description: Transition time between changes of the dynamic colour states
@@ -207,7 +208,7 @@ action:
       lights_when_tv_on: !input lights_when_tv_on
       all_lights: !input light
       target_lights: >
-        {% if tv_entity and is_state(tv_entity, 'on') and lights_when_tv_on %}
+        {% if tv_entity and is_state(tv_entity, 'on') and lights_when_tv_on is sequence and lights_when_tv_on | select('string') | list | length > 0 %}
           {{ lights_when_tv_on | select('string') | list }}
         {% else %}
           {{ all_lights | select('string') | list }}
@@ -235,7 +236,7 @@ action:
               transition: !input transition_time
           - choose:
               - conditions:
-                  - "{{ lights_when_tv_on | select('string') | list | length > 0 }}"
+                  - "{{ lights_when_tv_on is sequence and lights_when_tv_on | select('string') | list | length > 0 }}"
                 sequence:
                   - service: light.turn_on
                     target:
