--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -1,191 +1,193 @@
 blueprint:
   name: ZHA Philips Hue Dimmer Switch (RWL022) (Scene Preset)
-  description: Version 1.2.0. Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
-domain: automation
-input:
-  dimmer_switch:
-    name: Dimmer Switch
-    description: The dimmer switch to use
-    selector:
-      device:
-        integration: zha
-        model: RWL022
-        multiple: false
-  light:
-    name: Lights
-    description: The lights to control
-    selector:
-      entity:
-        domain:
-          - light
-        multiple: true
-  tv_entity:
-    name: TV Entity
-    description: The TV entity to check (optional)
-    default: ""
-    selector:
-      entity:
-        domain:
-          - media_player
-        multiple: false
-  lights_when_tv_on:
-    name: Lights When TV On
-    description: The lights to control when the TV is on (optional)
-    default: []
-    selector:
-      entity:
-        domain:
-          - light
-        multiple: true
-  included_scenes:
-    name: Hue Button Scenes
-    description: Scenes to be included. The first scene will be used only for the main ON button.
-    default: []
-    selector:
-      select:
-        multiple: true
-        options:
-          - label: Static Rest
-            value: >
-              {
-                "preset_id": "e03267e7-9914-4f47-97fe-63c0bd317fe7",
-                "type": "static"
-              }
-          - label: Static Relax
-            value: >
-              {
-                "preset_id": "e71b2ef3-1b15-4c4b-b036-4b3d6efe58f8",
-                "type": "static"
-              }
-          - label: Static Read
-            value: >
-              {
-                "preset_id": "035b6ecf-414e-4781-abc7-3911556097cb",
-                "type": "static"
-              }
-          - label: Static Concentrate
-            value: >
-              {
-                "preset_id": "0cbec4e8-d064-4457-986a-fe6078a63f39",
-                "type": "static"
-              }
-          - label: Static Bright
-            value: >
-              {
-                "preset_id": "6d10a807-7330-46d1-b093-c15520ba72c0",
-                "type": "static"
-              }
-          - label: Static Dimmed
-            value: >
-              {
-                "preset_id": "8f55e62a-e5f8-456a-9e8b-61f314bd4e99",
-                "type": "static"
-              }
-          - label: Dynamic Galaxy
-            value: >
-              {
-                "preset_id": "a6ba3a6e-1e3a-41fd-84f2-f7b021935deb",
-                "type": "dynamic"
-              }
-          - label: Dynamic Nighttime
-            value: >
-              {
-                "preset_id": "cfdb43c7-ccb3-4dd1-b4c7-036e0d74aeb9",
-                "type": "dynamic"
-              }
-          - label: Dynamic Sleepy
-            value: >
-              {
-                "preset_id": "6170702c-f2fc-46fc-99ef-ac98b6c1293e",
-                "type": "dynamic"
-              }
-          - label: Dynamic Unwind
-            value: >
-              {
-                "preset_id": "f7c2f4ce-f957-4745-b9bf-651d5b81c9a6",
-                "type": "dynamic"
-              }
-          - label: Dynamic Storybook
-            value: >
-              {
-                "preset_id": "4f76cd74-28db-455b-9c11-04654be86281",
-                "type": "dynamic"
-              }
-          - label: Dynamic Shine
-            value: >
-              {
-                "preset_id": "ded92eba-901e-4675-8a77-2d17d95aac54",
-                "type": "dynamic"
-              }
-          - label: Dynamic Arise
-            value: >
-              {
-                "preset_id": "d7225176-5cb9-47f3-ab99-8ca9908866fc",
-                "type": "dynamic"
-              }
-  dynamic_transition:
-    name: Dynamic Transition
-    description: Transition time between changes of the dynamic colour states
-    default: 45
-    selector:
-      number:
-        min: 0
-        max: 300
-        step: 1
-        unit_of_measurement: sec
-        mode: slider
-  dynamic_interval:
-    name: Dynamic Interval
-    description: Time between changes of the dynamic colour states
-    default: 60
-    selector:
-      number:
-        min: 0
-        max: 300
-        step: 1
-        unit_of_measurement: sec
-        mode: slider
-  scene_helper:
-    name: Scene Helper
-    description: Please select an Input Text Helper to be used to record the scene sequence in JSON format with timestamp.
-    selector:
-      entity:
-        domain:
-          - input_text
-        multiple: false
-  transition_time:
-    name: Transition Time
-    description: Transition time between changes of the light state (appied on ON/OFF/+/-)
-    default: 0.7
-    selector:
-      number:
-        min: 0.0
-        max: 3.0
-        step: 0.1
-        unit_of_measurement: sec
-        mode: slider
-  hold_press_change:
-    name: Hold Press Change
-    description: Transition step between changes of the light state (appied on ON/OFF/+/-)
-    default: 18
-    selector:
-      number:
-        min: 0.0
-        max: 25.0
-        step: 1.0
-        unit_of_measurement: "%"
-        mode: slider
-  reset_after:
-    name: Reset After
-    description: Timeout in seconds after which the order is reset to the first scene.
-    default: 5
-    selector:
-      number:
-        min: 1.0
-        max: 120.0
-        step: 1.0
-        unit_of_measurement: s
-        mode: slider
+  description: >
+    Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
+    Version 1.2.0
+  domain: automation
+  input:
+    dimmer_switch:
+      name: Dimmer Switch
+      description: The dimmer switch to use
+      selector:
+        device:
+          integration: zha
+          model: RWL022
+          multiple: false
+    light:
+      name: Lights
+      description: The lights to control
+      selector:
+        entity:
+          domain:
+            - light
+          multiple: true
+    tv_entity:
+      name: TV Entity
+      description: The TV entity to check (optional)
+      default: ""
+      selector:
+        entity:
+          domain:
+            - media_player
+          multiple: false
+    lights_when_tv_on:
+      name: Lights When TV On
+      description: The lights to control when the TV is on (optional)
+      default: []
+      selector:
+        entity:
+          domain:
+            - light
+          multiple: true
+    included_scenes:
+      name: Hue Button Scenes
+      description: Scenes to be included. The first scene will be used only for the main ON button.
+      default: []
+      selector:
+        select:
+          multiple: true
+          options:
+            - label: Static Rest
+              value: >
+                {
+                  "preset_id": "e03267e7-9914-4f47-97fe-63c0bd317fe7",
+                  "type": "static"
+                }
+            - label: Static Relax
+              value: >
+                {
+                  "preset_id": "e71b2ef3-1b15-4c4b-b036-4b3d6efe58f8",
+                  "type": "static"
+                }
+            - label: Static Read
+              value: >
+                {
+                  "preset_id": "035b6ecf-414e-4781-abc7-3911556097cb",
+                  "type": "static"
+                }
+            - label: Static Concentrate
+              value: >
+                {
+                  "preset_id": "0cbec4e8-d064-4457-986a-fe6078a63f39",
+                  "type": "static"
+                }
+            - label: Static Bright
+              value: >
+                {
+                  "preset_id": "6d10a807-7330-46d1-b093-c15520ba72c0",
+                  "type": "static"
+                }
+            - label: Static Dimmed
+              value: >
+                {
+                  "preset_id": "8f55e62a-e5f8-456a-9e8b-61f314bd4e99",
+                  "type": "static"
+                }
+            - label: Dynamic Galaxy
+              value: >
+                {
+                  "preset_id": "a6ba3a6e-1e3a-41fd-84f2-f7b021935deb",
+                  "type": "dynamic"
+                }
+            - label: Dynamic Nighttime
+              value: >
+                {
+                  "preset_id": "cfdb43c7-ccb3-4dd1-b4c7-036e0d74aeb9",
+                  "type": "dynamic"
+                }
+            - label: Dynamic Sleepy
+              value: >
+                {
+                  "preset_id": "6170702c-f2fc-46fc-99ef-ac98b6c1293e",
+                  "type": "dynamic"
+                }
+            - label: Dynamic Unwind
+              value: >
+                {
+                  "preset_id": "f7c2f4ce-f957-4745-b9bf-651d5b81c9a6",
+                  "type": "dynamic"
+                }
+            - label: Dynamic Storybook
+              value: >
+                {
+                  "preset_id": "4f76cd74-28db-455b-9c11-04654be86281",
+                  "type": "dynamic"
+                }
+            - label: Dynamic Shine
+              value: >
+                {
+                  "preset_id": "ded92eba-901e-4675-8a77-2d17d95aac54",
+                  "type": "dynamic"
+                }
+            - label: Dynamic Arise
+              value: >
+                {
+                  "preset_id": "d7225176-5cb9-47f3-ab99-8ca9908866fc",
+                  "type": "dynamic"
+                }
+    dynamic_transition:
+      name: Dynamic Transition
+      description: Transition time between changes of the dynamic colour states
+      default: 45
+      selector:
+        number:
+          min: 0
+          max: 300
+          step: 1
+          unit_of_measurement: sec
+          mode: slider
+    dynamic_interval:
+      name: Dynamic Interval
+      description: Time between changes of the dynamic colour states
+      default: 60
+      selector:
+        number:
+          min: 0
+          max: 300
+          step: 1
+          unit_of_measurement: sec
+          mode: slider
+    scene_helper:
+      name: Scene Helper
+      description: Please select an Input Text Helper to be used to record the scene sequence in JSON format with timestamp.
+      selector:
+        entity:
+          domain:
+            - input_text
+          multiple: false
+    transition_time:
+      name: Transition Time
+      description: Transition time between changes of the light state (appied on ON/OFF/+/-)
+      default: 0.7
+      selector:
+        number:
+          min: 0.0
+          max: 3.0
+          step: 0.1
+          unit_of_measurement: sec
+          mode: slider
+    hold_press_change:
+      name: Hold Press Change
+      description: Transition step between changes of the light state (appied on ON/OFF/+/-)
+      default: 18
+      selector:
+        number:
+          min: 0.0
+          max: 25.0
+          step: 1.0
+          unit_of_measurement: "%"
+          mode: slider
+    reset_after:
+      name: Reset After
+      description: Timeout in seconds after which the order is reset to the first scene.
+      default: 5
+      selector:
+        number:
+          min: 1.0
+          max: 120.0
+          step: 1.0
+          unit_of_measurement: s
+          mode: slider
 mode: queued
 max_exceeded: silent
 trigger:
